--- a/rocks/slurmdbd/rockcraft.yaml
+++ b/rocks/slurmdbd/rockcraft.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 name: slurmdbd
-version: 23.11.4-1
+version: 24.11.3-2
 summary: The Slurm database daemon
 description: |
   slurmdbd provides a secure enterprise-wide interface to a database for Slurm.
@@ -22,6 +22,9 @@ description: |
 base: ubuntu@24.04
 platforms:
   amd64:
+package-repositories:
+  - type: apt
+    ppa: ubuntu-hpc/slurm-wlm-24.11
 
 services:
   slurmdbd:
